# nova-browser

./: Cargo.toml  LICENSE  README.md
.claude/: CLAUDE.md
crates/mods/mod-css-engine/: Cargo.toml
crates/mods/mod-css-engine/src/: animation.rs  animation_manager.rs  cascade.rs  defaults.rs  lib.rs  media.rs  parallel.rs  parser.rs  selector.rs  transitions.rs  values.rs
crates/mods/mod-html-parser/: Cargo.toml
crates/mods/mod-html-parser/src/: lib.rs
crates/mods/mod-image/: Cargo.toml
crates/mods/mod-image/src/: lib.rs
crates/mods/mod-js/: Cargo.toml
crates/mods/mod-js/src/: canvas.rs  dom_api.rs  dom_bridge.rs  event_system.rs  fetch_api.rs  lib.rs  quickjs_runtime.rs  service_worker.rs  shadow_dom.rs  storage.rs  timers.rs  web_apis.rs  websocket.rs  xhr.rs
crates/mods/mod-layout/: Cargo.toml
crates/mods/mod-layout/src/: incremental.rs  lib.rs
crates/mods/mod-network/: Cargo.toml
crates/mods/mod-network/src/: cache.rs  cookie_jar.rs  cors.rs  form.rs  hsts.rs  http2.rs  lib.rs  transport.rs  websocket.rs
crates/mods/mod-painter/: Cargo.toml
crates/mods/mod-painter/src/: lib.rs
crates/nova-core/: Cargo.toml
crates/nova-core/src/: bridge.rs  lib.rs
crates/nova-gpu/: Cargo.toml
crates/nova-gpu/src/: compositor.rs  lib.rs  vello_backend.rs
crates/nova-ipc/: Cargo.toml
crates/nova-ipc/src/: lib.rs
crates/nova-mod-api/: Cargo.toml
crates/nova-mod-api/src/: capability.rs  content.rs  error.rs  lib.rs  manifest.rs  message.rs  permission.rs  trigger.rs  types.rs
crates/nova-pipeline/: Cargo.toml
crates/nova-pipeline/src/: lib.rs
crates/nova-registry/: Cargo.toml
crates/nova-registry/src/: lib.rs
crates/nova-security/: Cargo.toml
crates/nova-security/src/: csp.rs  lib.rs
crates/nova-shell/: Cargo.toml
crates/nova-shell/src/: bookmarks.rs  devtools.rs  downloads.rs  history.rs  lib.rs  main.rs  persistent_history.rs  renderer.rs  startup.rs  tab.rs  text_shaping.rs  window.rs
docs/: index.html
