[workspace]
members = [
    "crates/nova-core",
    "crates/nova-mod-api",
    "crates/nova-ipc",
    "crates/nova-gpu",
    "crates/nova-registry",
    "crates/nova-security",
    "crates/nova-pipeline",
    "crates/nova-shell",
    "crates/mods/mod-network",
    "crates/mods/mod-html-parser",
    "crates/mods/mod-css-engine",
    "crates/mods/mod-layout",
    "crates/mods/mod-painter",
    "crates/mods/mod-js",
    "crates/mods/mod-image",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
url = "2"
rayon = "1"
async-trait = "0.1"

# GPU
wgpu = "24"

# Networking
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
rustls = "0.23"
tokio-rustls = "0.26"

# Web parsing
html5ever = "0.29"
markup5ever = "0.14"
cssparser = "0.34"

# Layout
taffy = "0.7"

# Internal crates
nova-mod-api = { path = "crates/nova-mod-api" }
nova-core = { path = "crates/nova-core" }
nova-ipc = { path = "crates/nova-ipc" }
nova-gpu = { path = "crates/nova-gpu" }
nova-registry = { path = "crates/nova-registry" }
nova-security = { path = "crates/nova-security" }
nova-pipeline = { path = "crates/nova-pipeline" }
nova-shell = { path = "crates/nova-shell" }
mod-css-engine = { path = "crates/mods/mod-css-engine" }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
