[package]
name = "nova-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NOVA Browser - GPU compositor using wgpu"

[dependencies]
nova-mod-api = { workspace = true }
wgpu = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
vello = "0.8.0"
pollster = "0.4.0"
