[package]
name = "nova-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NOVA Browser - IPC message bus between core and mods"

[dependencies]
nova-mod-api = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
