[package]
name = "nova-mod-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NOVA Browser - Mod API traits, types, and contracts"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
