[package]
name = "nova-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NOVA Browser - Capability registry and mod loader"

[dependencies]
nova-mod-api = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
async-trait = { workspace = true }
