[package]
name = "mod-css-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NOVA Mod - CSS parser and style engine"

[dependencies]
nova-mod-api = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
semver = { workspace = true }
cssparser = { workspace = true }
rayon = { workspace = true }
