[package]
name = "mod-image"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NOVA Mod - Image decoder (PNG, JPEG, WebP)"

[dependencies]
nova-mod-api = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
semver = { workspace = true }
bytes = { workspace = true }
image = { version = "0.25.10", features = ["png", "jpeg", "webp", "gif"] }
resvg = "0.45"

[dev-dependencies]
tokio = { workspace = true }
