[package]
name = "mod-js"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NOVA Mod - JavaScript engine (placeholder for QuickJS integration)"

[dependencies]
nova-mod-api = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
semver = { workspace = true }
rquickjs = { version = "0.9", features = ["bindgen", "classes", "properties", "parallel"] }
tokio = { workspace = true }
serde_json = { workspace = true }
dirs = "6"
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
